# ReSolve

./: .buildinfo  .clang-format  .cmake-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Common.hpp  LICENSE  LinAlgWorkspace.cpp  LinAlgWorkspace.hpp  LinSolver.cpp  LinSolver.hpp  LinSolverDirectCuSolverGLU.cpp  LinSolverDirectCuSolverGLU.hpp  LinSolverDirectCuSolverRf.cpp  LinSolverDirectCuSolverRf.hpp  LinSolverDirectKLU.cpp  LinSolverDirectKLU.hpp  LinSolverIterativeFGMRES.hpp  Makefile  Matrix.cpp  Matrix.hpp  MatrixHandler.cpp  MatrixHandler.hpp  MatrixIO.cpp  MatrixIO.hpp  NOTICE  README.md  RefactorizationSolver.cpp  RefactorizationSolver.hpp  SystemSolver.cpp  (+43 more)
examples/: ._ExampleHelper.hpp  ._test.sh  CMakeLists.txt  ExampleHelper.hpp  Stopwatch.cpp  Stopwatch.hpp  gluRefactor.cpp  gpuRefactor.cpp  gpuRefactorSame.cpp  hybrid_solver.cpp  hybrid_solver_test.cpp  kluFactor.cpp  kluRefactor.cpp  kluStandAlone.cpp  main.cpp  r_GMRES.cpp  r_GMRES_CUDA.cpp  r_GMRES_cpu.cpp  r_KLU_GLU.cpp  r_KLU_GLU_matrix_values_update.cpp  r_KLU_KLU.cpp  r_KLU_KLU_standalone.cpp  r_KLU_cusolverrf_redo_factorization.cpp  r_KLU_rf.cpp  r_KLU_rf_FGMRES.cpp  r_KLU_rf_FGMRES_reuse_factorization.cpp  r_KLU_rocSolverRf_FGMRES.cpp  r_KLU_rocsolverrf.cpp  r_KLU_rocsolverrf_redo_factorization.cpp  r_LUSOL_LUSOL.cpp  r_SysSolver.cpp  r_SysSolverCuda.cpp  r_SysSolverHip.cpp  r_SysSolverHipRefine.cpp  r_randGMRES.cpp  r_randGMRES_CUDA.cpp  r_randGMRES_cpu.cpp  randGmres.cpp  sysRefactor.cpp  test.sh
examples/experimental/: CMakeLists.txt  gpuRefactorSame.cpp  r_KLU_GLU_matrix_values_update.cpp  r_KLU_cusolverrf_redo_factorization.cpp  r_KLU_rf_FGMRES_reuse_factorization.cpp  r_KLU_rocsolverrf_asym6x6.cpp  r_KLU_rocsolverrf_redo_factorization.cpp
examples/resolve_consumer/: CMakeLists.txt  r_KLU_KLU.cpp
resolve/: ._LinSolverIterativeFGMRES.cpp  CMakeLists.txt  Common.hpp  Doxygen.hpp  ExampleHelper.hpp  GramSchmidt.cpp  GramSchmidt.hpp  LinAlgWorkspace.cpp  LinAlgWorkspace.hpp  LinSolver.cpp  LinSolver.hpp  LinSolverDirect.cpp  LinSolverDirect.hpp  LinSolverDirectCpuILU0.cpp  LinSolverDirectCpuILU0.hpp  LinSolverDirectCuSolverGLU.cpp  LinSolverDirectCuSolverGLU.hpp  LinSolverDirectCuSolverRf.cpp  LinSolverDirectCuSolverRf.hpp  LinSolverDirectCuSparseILU0.cpp  LinSolverDirectCuSparseILU0.hpp  LinSolverDirectKLU.cpp  LinSolverDirectKLU.hpp  LinSolverDirectLUSOL.cpp  LinSolverDirectLUSOL.hpp  LinSolverDirectRocSolverRf.cpp  LinSolverDirectRocSolverRf.hpp  LinSolverDirectRocSparseILU0.cpp  LinSolverDirectRocSparseILU0.hpp  LinSolverDirectSerialILU0.cpp  LinSolverDirectSerialILU0.hpp  LinSolverIterative.cpp  LinSolverIterative.hpp  LinSolverIterativeFGMRES.cpp  LinSolverIterativeFGMRES.hpp  LinSolverIterativeRandFGMRES.cpp  LinSolverIterativeRandFGMRES.hpp  Matrix.cpp  Matrix.hpp  MatrixCOO.cpp  (+33 more)
resolve/cpu/: CMakeLists.txt  CpuMemory.hpp  MemoryUtils.cpp  cpuHykktPermutationKernels.cpp  cpuHykktPermutationKernels.hpp  cpuKernels.cpp  cpuKernels.h  cpuSketchingKernels.cpp  cpuSketchingKernels.h  cpuVectorKernels.cpp
resolve/cuda/: CMakeLists.txt  CudaMemory.hpp  MemoryUtils.cu  VectorKernels.cu  cudaKernels.cu  cudaKernels.h  cudaSketchingKernels.cu  cudaSketchingKernels.h  cudaVectorKernels.cu  cudaVectorKernels.h  cuda_check_errors.hpp
resolve/hip/: CMakeLists.txt  HipMemory.hpp  MemoryUtils.hip  VectorKernels.hip  hipKernels.h  hipKernels.hip  hipSketchingKernels.h  hipSketchingKernels.hip  hipVectorKernels.h  hipVectorKernels.hip  hip_check_errors.hpp
resolve/hykkt/: CMakeLists.txt  CudaPermutationKernels.cu  CudaPermutationKernels.hpp  HipPermutationKernels.hip  HipPermutationKernels.hpp  PermClass.cpp  PermClass.hpp  Permutation.cpp  Permutation.hpp  PermutationHandler.cpp  PermutationHandler.hpp  PermutationKernelsImpl.hpp  README.md  cpuHykktPermutationKernels.cpp  cpuHykktPermutationKernels.hpp  cpuPermutationKernels.cpp  cpuPermutationKernels.hpp
resolve/lusol/: CMakeLists.txt  LICENSE.md  README.md  lusol.f90  lusol.hpp  lusol_precision.f90
resolve/matrix/: CMakeLists.txt  Coo.cpp  Coo.hpp  Csc.cpp  Csc.hpp  Csr.cpp  Csr.hpp  MatrixHandler.cpp  MatrixHandler.hpp  MatrixHandlerCpu.cpp  MatrixHandlerCpu.hpp  MatrixHandlerCuda.cpp  MatrixHandlerCuda.hpp  MatrixHandlerHip.cpp  MatrixHandlerHip.hpp  MatrixHandlerImpl.hpp  Sparse.cpp  Sparse.hpp  Utilities.cpp  Utilities.hpp  io.cpp  io.hpp  utilities.cpp  utilities.hpp
resolve/random/: CMakeLists.txt  RandSketchingCountSketch.cpp  RandSketchingCountSketch.hpp  RandSketchingFWHT.cpp  RandSketchingFWHT.hpp  RandSketchingManager.cpp  RandSketchingManager.hpp  RandomSketchingCount.cpp  RandomSketchingCount.hpp  RandomSketchingCountCpu.cpp  RandomSketchingCountCpu.hpp  RandomSketchingCountCuda.cpp  RandomSketchingCountCuda.hpp  RandomSketchingCountHip.cpp  RandomSketchingCountHip.hpp  RandomSketchingFWHT.cpp  RandomSketchingFWHT.hpp  RandomSketchingFWHTCpu.cpp  RandomSketchingFWHTCpu.hpp  RandomSketchingFWHTCuda.cpp  RandomSketchingFWHTCuda.hpp  RandomSketchingFWHTHip.cpp  RandomSketchingFWHTHip.hpp  RandomSketchingImpl.hpp  SketchingHandler.cpp  SketchingHandler.hpp  cpuSketchingKernels.cpp  cpuSketchingKernels.h
resolve/resolve_consumer/: CMakeLists.txt  README.md
resolve/utilities/: CMakeLists.txt  version.cpp  version.hpp
resolve/vector/: CMakeLists.txt  Vector.cpp  Vector.hpp  VectorBase.cpp  VectorBase.hpp  VectorDense.cpp  VectorDense.hpp  VectorHandler.cpp  VectorHandler.hpp  VectorHandlerCpu.cpp  VectorHandlerCpu.hpp  VectorHandlerCuda.cpp  VectorHandlerCuda.hpp  VectorHandlerHip.cpp  VectorHandlerHip.hpp  VectorHandlerImpl.hpp  VectorKernels.hpp  VectorMulti.cpp  VectorMulti.hpp  cudaVectorKernels.cu  cudaVectorKernels.h
resolve/workspace/: CMakeLists.txt  LinAlgWorkspace.cpp  LinAlgWorkspace.hpp  LinAlgWorkspaceCUDA.cpp  LinAlgWorkspaceCUDA.hpp  LinAlgWorkspaceCpu.cpp  LinAlgWorkspaceCpu.hpp  LinAlgWorkspaceFactory.cpp  LinAlgWorkspaceFactory.hpp  LinAlgWorkspaceHIP.cpp  (+7 more)
(+298 files in other folders)
